# orange3-single-cell

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.pypi  azure-pipelines-build.yml  azure-pipelines.yml  codecov.yml  conda_environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/: install_addon.yml  jobs.yml  test.yml  test_job.yml
.github/workflows/: main.yml
.travis/: install_miniconda.sh  install_orange.sh
doc/: conf.py  index.md  index.rst  widgets.json
doc/widgets/: align_datasets.md  batch_effect_removal.md  clusterstatistics.rst  clustervariation.rst  dot_matrix.md  filter.md  filter.rst  load_data.md  louvain.rst  marker_genes.md  normalize.rst  score_cells.md  score_genes.md  scorecells.rst  scoregenes.rst  single_cell_datasets.md  single_cell_preprocess.md  singlecelldatasets.rst  spatial_autocorrelation.md  tsne.rst
installer/conda/: meta.yaml
installer/conda-recipe/: meta.yaml
installer/macos/: build-macos-app.sh  create-dmg-installer.sh  python-framework.sh  requirements.txt  sign-app.sh
installer/macos/dmg-resources/: DS_Store
installer/windows/: build-and-sign.sh  build-conda-installer.sh  build-win-installer.sh  condainstall.bat  orange-conda.nsi  orange-install.nsi  sitecustomize.py
installer/windows/specs/: PY36-win64.txt  conda-spec.txt  update-conda-spec.bat
orangecontrib/single_cell/: __init__.py  __main__.py
orangecontrib/single_cell/launcher/: __init__.py  config.py  iconview.py  splash.py  (+2 more)
orangecontrib/variants/: reader.py
(+130 files in other folders)
