[metadata]
name = Orange3-SingleCell
author = Bioinformatics Laboratory, FRI UL
author_email = info@biolab.si
url = https://github.com/biolab/orange3-single-cell
project_urls =
    Bug Tracker = https://github.com/biolab/orange3-single-cell/issues
    Documentation = https://singlecell.biolab.si/docs/
    Source Code = https://github.com/biolab/orange3-single-cell
description = Add-on for bioinformatics analysis of single cell data.
long_description = file: README.pypi
long_description_content_type= text/markdown
keywords = orange3 add-on
license = GPLv3+
license_file = LICENSE

[options]
namespace_packages = orangecontrib
test_suite = orangecontrib.single_cell.tests.suite
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:

[options.entry_points]
orange3.addon =
	single_cell = orangecontrib.single_cell
orange.widgets =
    Single Cell = orangecontrib.single_cell.widgets
orange.canvas.help =
    html-index = orangecontrib.single_cell.widgets:WIDGET_HELP_PATH
orange.widgets.tutorials =
	vcftutorials = orangecontrib.single_cell.tutorials
